# brunatno-mordy

./: .gitignore  README.md  pyproject.toml
app/: chatbot.py
data_harvesting/backup/: all_movies.jsonl  movies_to_whisper.jsonl  transcriptions.jsonl  words.json
data_harvesting/data/: age_restricted.jsonl  all_movies.jsonl  bomba_captions.jsonl  movies_to_whisper.jsonl  transcriptions.jsonl
data_harvesting/data_cleaning/: chunked_2.jsonl  chunked_3.jsonl  chunked_all.jsonl  chunking.py  creator_of_bad_words.py  dataset2.jsonl  words.json
data_harvesting/subtitles/: dataset_config.py  youtube_subtitles.py
data_harvesting/transcription/: careless_whisper.py
data_processing/: data_formating_and_training.py  deepseek_api.py  kapitan_bomba_prompts.jsonlines  main.py  prepare_dataset.py  preprocessed.jsonl  prompts_without_context.jsonl  testing.py
data_processing/train_datasets/: descriptions.jsonl  descriptions_instruct.jsonl  descriptions_manual.jsonl  error.jsonl
