[tool.poetry]
name = "brunatno-mordy"
version = "0.1.0"
description = ""
authors = ["Maciej Gierczak <maciejgier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytubefix = "^8.12.0"
huggingface-hub = "^0.27.1"
jsonlines = "^4.0.0"
openai-whisper = "^20240930"
openai = "^1.60.0"
nltk = "^3.9.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
